# hebrew-transliterate

./: .gitignore  README.md  __init__.py  pyproject.toml  trans_to_heb.py
hebrew_transliterate/: __init__.py  _heb_to_trans.py  _trans_to_ktiv_male.py
